@@ -1,3 +1,15 @@
+2004-10-13  Richard Williamson   <rjw@apple.com>
+
+	Moved boolean checks prior to NSNumber checks.  booleans are
+	NSNumbers.
+
+	Follow on to <rdar://problem/3821515> binding layer needs to convert NSNumber-bools to js type boolean not number.
+
+        Reviewed by John.
+
+        * bindings/objc/objc_utility.mm:
+        (KJS::Bindings::convertObjcValueToValue):
+
 2004-10-12  Richard Williamson   <rjw@apple.com>
 
         Fixed access to DOM object via WebScriptObject API.
